--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,13 +1,13 @@
 .header{
     position: fixed;
-    top: 20px;
+    top: 3.75rem;
     left:50%;
     transform: translateX(-50%);
     display: flex;
     z-index: 999;
     justify-content: space-between;
     align-items: center;
-    width: calc(100% - 40px);
+    width: calc(100% - 11rem);
     height: 72px;
     padding: 0 1.25rem;
     color: #333333;
