--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -4,4 +4,59 @@
     background-position: center;
     height: 500px;
     border-radius: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    color: #dedede;
+    text-align: center;
+    
+}
+.hero-content{
+    width: 370px;
+    margin-right: 15%;
+}
+.hero-content span{
+    font-size: 1.25rem;
+    margin-bottom: 10px;
+}
+.hero-content h2{
+    font-size: 1.5rem;
+    font-weight: 500;
+    line-height: 32px;
+}
+.hero-content span,
+.hero-content h2{
+    letter-spacing: 2px;
+}
+.hero-buttons{
+    margin-top: 2.5rem;
+    gap: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.btn{
+    width: 160px;
+    height: 48px;
+    font-size: 1.25rem;
+    padding: 10px 20px;
+    border-radius:30px;
+    transition: background-color 0.3s, border 0.3s;
+    line-height: 23px;
+    border: 2px solid #fff;
+}
+.btn-outline{
+    background-color: transparent;
+    color: #fff;
+}
+.btn-filled{
+    background-color: #fff;
+    color: #6329A2;
+}
+
+.btn-outline:hover,
+.btn-filled:hover{
+    background-color: #6329A2;
+    border: 2px solid #6329A2;
+    color: #fff;
 }
