--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -8,3 +8,28 @@ main{
     margin: 0 auto;
     
 }
+.btn{
+    width: 160px;
+    height: 48px;
+    font-size: 1.25rem;
+    padding: 10px 20px;
+    border-radius:30px;
+    transition: background-color 0.3s, border 0.3s;
+    line-height: 23px;
+    border: 2px solid #fff;
+}
+.btn-outline{
+    background-color: transparent;
+    color: #fff;
+}
+.btn-filled{
+    background-color: #fff;
+    color: #6329A2;
+}
+
+.btn-outline:hover,
+.btn-filled:hover{
+    background-color: #6329A2;
+    border: 2px solid #6329A2;
+    color: #fff;
+}
