--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -7,6 +7,7 @@
     z-index: 999;
     justify-content: space-between;
     align-items: center;
+    max-width: 1316px;
     width: calc(100% - 11rem);
     height: 72px;
     padding: 0 1.25rem;
