--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,11 +1,10 @@
-.header{
+.header {
     position: fixed;
     top: 3.75rem;
-    left:50%;
+    left: 50%;
     transform: translateX(-50%);
     display: flex;
     z-index: 999;
-    justify-content: space-between;
     align-items: center;
     max-width: 1316px;
     width: calc(100% - 11rem);
@@ -18,25 +17,112 @@
     transition: .3s ease;
 }
 
-.nav-left .logo{
+.nav-left .logo {
     height: 32px;
 }
 
+.nav-center {
+    margin-left: 20rem;
+}
+
 .nav-center .types-nav,
-.nav-right .info-nav{
+.nav-right .info-nav {
     display: flex;
     flex-direction: row;
     gap: 1.50rem;
 }
-.nav-right img{
+
+.nav-right img {
     width: 24px;
     height: 24px;
 }
+
 .nav-center .types-nav a:hover,
-.nav-right .info-nav a:hover{
+.nav-right .info-nav a:hover {
     color: #9856ef;
 }
 
-.nav-right .info-nav a:hover img{
+.nav-right .info-nav a:hover img {
     opacity: 0.7;
+}
+
+.nav-container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.menu-toggle {
+    display: none;
+}
+
+.menu-icon {
+    height: 32px;
+    width: 32px;
+    cursor: pointer;
+    display: none;
+}
+
+.menu-icon img {
+    width: 100%;
+    height: 100%;
+}
+@media screen and (max-width: 1350px){
+    .nav-center {
+    margin-left: 8rem;
+}
+}
+@media screen and (max-width: 1100px) {
+    .menu-icon {
+        display: block;
+    }
+    .header{
+        justify-content: space-between;
+    }
+
+    .nav-container {
+        position: fixed;
+        top: 58px;
+        right: -100%;
+        flex-direction: column;
+        background: #fff;
+        width: 180px;
+        padding: 1rem;
+        border-radius: 0 0 16px 16px;
+        z-index: 1000;
+        transition: .3s ease;
+    }
+
+    .nav-center,
+    .nav-right {
+        width: 100%;
+    }
+
+
+    .nav-center a,
+    .nav-right a {
+        border-bottom: 1px solid #eeee;
+        width: 100%;
+        display: block;
+    }
+
+    .nav-container .nav-center ul,
+    .nav-container .nav-right ul {
+        flex-direction: column;
+        gap: 1.25rem;
+        width: 100%;
+    }
+
+    .nav-center ul li,
+    .nav-right ul li,
+    .nav-right ul li img {
+        width: 100%;
+        text-align: center;
+        padding-bottom: 0.3rem;
+    }
+
+    .menu-toggle:checked~.nav-container {
+        right: 0;
+    }
+
 }
