--- a/assets/css/category.css
+++ b/assets/css/category.css
@@ -48,3 +48,13 @@
     text-align: center;
     z-index: 2;
 }
+@media screen and (max-width: 1000px){
+    .category-types{
+        flex-wrap: wrap;
+    }
+}
+@media screen and (max-width: 700px){
+    .card{
+        width: 100%;
+    }
+}
